- Can use SPICE kernel for NEO or other solar system objects. On Linux this require installation of libcalceph, see above.
- Use binary file instead of database for asteroid element, improve performance
- Show more asteroid information from the Asteroid lightcurve database
- Display object information directly from the Search window
- Add Alpaca telescope discovery
- Add civil twilight in the calendar
- Allow to import a mosaic in the observing list
- In Observer tool, stop the telescope motion when releasing the arrow button
- Use the nebula outlines from OpenNGC, add option to select line or surface
- Allow simulation for a single asteroid and comet
- Add menu "Window/Lock chart position" to not move the chart after a search
- Show hour angle and airmass under mouse cursor
- Add telescope handpad for ASCOM and INDI
- Add option to blure and set transparency of surface catalog
- Add pre-pointing feature for asteroid occultation
- Add button to lock the magnitude limit at the current value
- Merge Gaia DR3 with XHIP for the default star catalog, when available all the bright stars astrometry is now from Gaia.

Bug fix:
- Fix Bayer labels
- Update Quicksat to support the new magnitude file
- Fix PHD2 comet tracking interface
- Fix setting telescope time
- Planet in line mode must be really transparent 
- Fix "Show Mark" option for comet and asteroid simulation

Removed:
- Move SAC to obsolete catalog, replaced by OpenNGC
- Remove Iridium flare computation

Take note you must not run this software with administrator right.
Since the version 4.2 a warning is show in the title bar if you do so.
Now this version refuse to start if launched as administrator.
If you are currently running your astronomy software in administrator mode it is time to change that because this is totally useless. The important point is you run all your software with the same user. But running all with the standard user is much better than running all in administrator!